0.10.4 [2010-02-03]
Fix release.
Disable OpenGL shaders by default. User activate it by setting use_glshaders = true in the [main] section of the config.ini

0.10.3 [2010-01-28]
Based on Qt 4.6.x
Bundling of plugins: Satellites, Oculars, AngleMeasure, CompassMarks, TelescopeControl, TextUserInterface.
New script engine improvements including variable script running speed, and a script console (activate with F12).
Made tabs in GUI smaller by moving titles under the icons.
Updated the plugin API to allow to compilation and easy distribution of static plugins.
Added plugins window.
Got rid of the boost library dependency.
The whole sky display viewport is now contained in a class deriving from QGraphicsWidget, allowing to move and resize it as a normal widget.
Generalized the use of shared pointers for StelObject management.
Use vertex shaders for computation of atmosphere color if OpenGL supports it.
Optimized openGL calls by replacing glBegin()/glEnd() by the use of vertexArray.
Optimization of critical parts of the projection code.
Added code for managing and displaying non-convex polygons + unit tests.
Recoded the StelGrid code to support non ponctual sky regions, and optimized API (new class StelSphericalIndex + unit tests)
Optimized many part of the code by reducing creation of temporary Vec3d/Vec3f.
Optimized JSON parser (x25 speed improvement) + unit tests.
Migrated all text drawing system to QFont. This fixes long standing bugs for displaying arabic and asian characters in the sky. Also allow to get rid of 6 source files and of the freetype dependency (managed internally to Qt)
Switch default back end mode to native for Windows as ATI drivers often have problems, still raster default for other platforms.  Add --graphics-system option.
Fixed magnitude computation for most of the planets.
Use GL Shader for stars rendering if OpenGL >= 2.1.
Re-organized the startup by moving log and command line processing to main.cpp.